[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Scene1.gd" type="Script" id=1]
[ext_resource path="res://assets/images/tile_ground.png" type="Texture" id=2]
[ext_resource path="res://assets/images/player.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/jump.mp3" type="AudioStream" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "tile_ground.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 27.6129 )

[node name="Scene1" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -262153, 0, 0, -262152, 0, 0, -327675, 0, 0, -196617, 0, 0, -196616, 0, 0, -262139, 0, 0, -131081, 0, 0, -131080, 0, 0, -196603, 0, 0, -65545, 0, 0, -65544, 0, 0, -131067, 0, 0, -9, 0, 0, -8, 0, 0, -65531, 0, 0, 65527, 0, 0, 65528, 0, 0, 5, 0, 0, 131063, 0, 0, 131064, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 196599, 0, 0, 196600, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/jump = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -1.29775, 2.24157 )
shape = SubResource( 3 )

[node name="FloorCast2D" type="RayCast2D" parent="Player"]
enabled = true

[node name="WallCastLeft" type="RayCast2D" parent="Player"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="WallCastRight" type="RayCast2D" parent="Player"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, -15 )

[node name="Stuck_on_wall_timer" type="Timer" parent="Player"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 5 )
